--- a/commit.html
+++ b/commit.html
@@ -3,5 +3,6 @@
      <head></head>
      	<body>
              <h1>primer avance</h1>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Veniam laborum, non nihil laudantium, minima quia error eius quos earum, aperiam vel ad eum aut modi ab possimus explicabo. Praesentium, dolor.</p>
         </body>
 </html>
